--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,17 @@
 h1{
- font-family: simsun
+ font-family: SimSun;
 }
 
 body{
- background-color: orange 
+ background-color: orange;
+ font-family: FangSong;
+}
+
+a {
+ color: red;
+}
+
+a:hover{
+ color:yellow;
+ background-color:red
 }
